Bug 306310 explicitly specify the charset (as UTF-8) for the about: channels r+sr=darin